--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "url shortener",
+  "name": "urlShort",
   "version": "1.0.0",
   "description": "Url shortening API",
   "repository": {
@@ -16,9 +16,13 @@
   "author": "Will Wedmedyk",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "mongodb": "^3.1.0",
+    "mongodb": "^3.1.1",
+    "mongoose": "^5.2.6",
     "node-sass-middleware": "^0.11.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
