--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node server.js --ignore public/",
+    "start": "cross-env NODE_ENV=development nodemon --exec babel-node server.js --ignore public/",
+    "build": "cross-env NODE_ENV=production nodemon --exec babel-node server.js --ignore public/",
     "w-start": "webpack --mode development",
     "w-build": "webpack --mode production",
     "dev": "webpack -wd"
@@ -34,6 +35,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^5.2.0",
     "eslint": "^5.0.1",
     "eslint-plugin-react": "^7.10.0",
     "nodemon": "^1.17.5",
