--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.2.6",
     "node-sass-middleware": "^0.11.0",
     "react": "^16.4.1",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.1"
   },
   "devDependencies": {
