--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "w-start": "webpack --mode development",
     "w-build": "webpack --mode production",
     "dev": "webpack -wd",
-    "test": "mocha --reporter spec testSetup.js \"src/*spec.js\""
+    "test": "mocha --reporter spec testSetup.js \"src/tests/*spec.js\"",
+    "watch": "mocha --reporter spec testSetup.js \"src/tests/*spec.js\" --watch",
+    "dev-all": "concurrently \"webpack -wd\" \"cross-env NODE_ENV=development\" \"nodemon --exec babel-node server.js --ignore public/ \" \"mocha --reporter spec testSetup.js \"src/tests/*spec.js\" --watch\""
   },
   "author": "Will Wedmedyk",
   "license": "ISC",
@@ -26,7 +28,6 @@
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "jest": "^24.0.0",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.6",
     "node-sass-middleware": "^0.11.0",
@@ -41,6 +42,11 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
+    "chai-enzyme": "^1.0.0-beta.1",
+    "cheerio": "^1.0.0-rc.2",
+    "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
