--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev": "webpack -wd",
     "test": "mocha --reporter spec testSetup.js \"src/tests/*spec.js\"",
     "watch": "mocha --reporter spec testSetup.js \"src/tests/*spec.js\" --watch",
-    "dev-all": "concurrently \"webpack -wd\" \"cross-env NODE_ENV=development\" \"nodemon --exec babel-node server.js --ignore public/ \" \"mocha --reporter spec testSetup.js \"src/tests/*spec.js\" --watch\""
+    "dev-all": "concurrently --kill-others \"npm run dev\" \"npm run start\" \"npm run watch\""
   },
   "author": "Will Wedmedyk",
   "license": "ISC",
@@ -31,6 +31,7 @@
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.6",
     "node-sass-middleware": "^0.11.0",
+    "prop-types": "^15.7.2",
     "react": "^16.4.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.1"
